Entry07 : First round of finishing without bonus

--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -1,12 +1,12 @@
-FILES = compute_dict.c parse_dict.c str_manipulation.c str_comparison.c printing.c translate_number.c check_arg.c initialize_num_conf.c
+FILES = ft_*.c
 
 OBJS = ${FILES:.c=.o}
 
-HEADERS = check_arg.h compute_dict.h parse_dict.h printing.h str_comparison.h str_manipulation.h translate_number.h initialize_num_conf.h
+HEADERS = libft.h
 
 NAME = libft.a
 
-CC = gcc
+CC = cc
 RM = rm -f
 LIB = ar rc
 
@@ -17,7 +17,6 @@ CFLAGS = -Werror -Wall -Wextra
 
 ${NAME}: ${OBJS}
 	${LIB} libstr.a ${OBJS} ${HEADERS}
-	${CC} -g -o ${NAME} ${CFLAGS} main.c -L. -lstr
 
 all :
 	${NAME}
@@ -31,6 +30,3 @@ fclean: clean
 re: fclean all
 
 .PHONY: all clean fclean re
-
-
-
