Entry24 : ALL IS GREEN FOR PRINTF

--- a/Printf/Makefile
+++ b/Printf/Makefile
@@ -6,13 +6,13 @@
 #    By: aadoue <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/06 16:21:55 by aadoue            #+#    #+#              #
-#    Updated: 2023/01/03 14:23:15 by aadoue           ###   ########.fr        #
+#    Updated: 2023/01/03 16:50:36 by aadoue           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libftprintf.a
 
-FILES = ft_printf.c ft_print_char.c ft_print_str.c ft_print_int.c ft_print_uint.c ft_print_uint_hexa.c ft_numlen.c ft_unumlen.c ft_print_hexa_u.c ft_strchr.c
+FILES = ft_printf.c ft_strlen.c ft_print_char.c ft_print_str.c ft_print_int.c ft_print_uint_hexa.c ft_numlen.c ft_unumlen.c ft_print_hexa_u.c ft_strchr.c
  
 OBJS = $(FILES:.c=.o)
 
