--- a/PushSwap/rendu/Makefile
+++ b/PushSwap/rendu/Makefile
@@ -5,69 +5,76 @@
 #                                                     +:+ +:+         +:+      #
 #    By: aadoue <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/02/15 15:54:31 by aadoue            #+#    #+#              #
-#    Updated: 2023/03/08 13:32:00 by aadoue           ###   ########.fr        #
+#    Created: 2023/04/12 16:11:49 by aadoue            #+#    #+#              #
+#    Updated: 2023/04/12 16:11:52 by aadoue           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-#Compiled
+SHELL := /bin/bash
 
-NAME = fractol
-MLX = libmlx.a
-LIBFT = libft.a
-PRINTF = ft_printf.a
+#Names
 
-#Directories
+MAIN := push_swap
+BONUS := checker
+SRC_DIR := sources
+HDRS_DIR := include
+OBJ_DIR := objects
+LIBFT_DIR := libft
+MAIN_OBJ := $(OBJ_DIR)/$(MAIN).o
+BONUS_OBJ := $(OBJ_DIR)/$(BONUS).o
+LIBFT := $(LIBFT_DIR)/libft.a
+HEADERS := $(addprefix $(HDRS_DIR)/, push_swap.h)
+SOURCES = $(addprefix $(SRC_DIR)/, basic_moves.c bonus.c checker.c checks.c count_moves.c finder.c push_swap.c sort.c stack.c turk.c)
+OBJECTS := $(patsubst $(SRC_DIR)%,$(OBJ_DIR)%,$(SOURCES:.c=.o))	
 
-SRCS_DIR = srcs
-HDRS_DIR = include
-MLX_DIR = mlx
-LIBFT_DIR = libft
-PRINTF_DIR = ft_printf
+#Compilation
 
-#Headers
+CC  := clang
+IFLAGS := -Iinclude -I$(LIBFT_DIR)/include
+CFLAGS := -Wall -Wextra -Werror -g3 
+LFLAGS := -Llibft -lft
 
-HDRS = $(addprefix $(HDRS_DIR)/, keys.h fractol.h)
-MLX_HDRS = $(addprefix $(MLX_DIR)/, mlx.h)
-LIBFT_HDRS = $(addprefix $(LIBFT_DIR)/, libft.h)
-PRINTF_HDRS = $(addprefix $(PRINTF_DIR)/, ft_printf.h)
+#Colors
 
-#Files
-
-SRCS = $(addprefix $(SRCS_DIR)/, fractol.c draw.c keys.c mandelbrot.c julia.c burningship.c)
-OBJS = $(SRCS:.c=.o)
-
-#Actions
-
-CC = clang
-CFLAGS = -Werror -Wall -Wextra -g
-GCC = $(CC) $(CFLAGS)
+GREEN = \x1b[32;01m
+RED = \x1b[31;01m
+BLUE = \x1b[34;01m
+RESET = \x1b[0m
+YELLOW = \x1b[33;01m
 
 #Rules
 
-all: $(NAME)
+all: $(LIBFT) $(MAIN)
 
-%.o: %.c $(HDRS) $(MLX_HDRS) $(LIBFT_HDRS) $(PRINTF_HDRS)
-	$(GCC) -c -o $@ $<
+$(LIBFT):
+	@$(MAKE) -C $(LIBFT_DIR) --quiet
 
-$(NAME): $(OBJS)
-	cd $(LIBFT_DIR) && $(MAKE)
-	cd $(MLX_DIR) && $(MAKE)
-	cd $(PRINTF_DIR) && $(MAKE)
-	$(GCC) $(OBJS) -L$(MLX_DIR) -lmlx -L/usr/lib -I$(MLX_DIR) -lXext -lX11 -lm -lz $(LIBFT_DIR)/$(LIBFT) $(PRINTF_DIR)/$(PRINTF) -o $(NAME)
+$(MAIN): $(LIBFT) $(OBJ_DIR) $(OBJECTS)
+	@$(CC) $(CFLAGS) $(IFLAGS) $(subst $(BONUS_OBJ),,$(OBJECTS)) $(LFLAGS) -o $(MAIN)
+	@printf "(push_swap) $(GREEN)Created executable $(MAIN)$(RESET)\n"
+
+$(OBJ_DIR):
+	@mkdir -p $(OBJ_DIR)
+
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.c $(HEADERS)
+	@@$(CC) $(CFLAGS) $(IFLAGS) -c $< -o $@
+	@printf "(push_swap) $(BLUE)Created object $$(basename $@)$(RESET)\n"
+
+bonus: $(LIBFT) $(OBJ_DIR) $(OBJECTS)
+	@$(CC) $(CFLAGS) $(IFLAGS) $(subst $(MAIN_OBJ),,$(OBJECTS)) $(LFLAGS) -o $(BONUS)
+	@printf "(push_swap) $(GREEN)Created executable $(BONUS)$(RESET)\n"
 
 clean:
-	rm -f $(OBJS)
-	cd $(MLX_DIR) && $(MAKE) clean
-	cd $(LIBFT_DIR) && $(MAKE) clean
-	cd $(PRINTF_DIR) && $(MAKE) clean
+	@$(MAKE) clean -C $(LIBFT_DIR) --quiet
+	@rm -rf $(OBJ_DIR)
+	@printf "(push_swap) $(RED)Cleaned push_swap objects\n"
 
 fclean: clean
-	rm -f $(NAME)
-	cd $(MLX_DIR) && $(MAKE) clean
-	cd $(LIBFT_DIR) && $(MAKE) fclean
-	cd $(PRINTF_DIR) && $(MAKE) fclean
+	@$(MAKE) fclean -C $(LIBFT_DIR) --quiet
+	@-rm -rf $(MAIN) $(BONUS) $(OBJ_DIR)
+	@printf "(push_swap) $(RED)FCleaned push_swap objects\n"
+	@printf "(push_swap) $(RED)Removing executables\n"
 
-re: fclean $(NAME)
+re: fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all, clean, fclean, re
